<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.imagefilters.MainActivity">

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:icon="@drawable/ic_pp_back"
        android:title="@string/action_reset"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open"
        android:orderInCategory="101"
        android:icon="@drawable/ic_pp_gall"
        android:title="@string/action_open"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:icon="@drawable/ic_pp_send"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_apply"
        android:orderInCategory="103"
        android:icon="@drawable/ic_pp_ok"
        android:title="@string/action_apply"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="104"
        android:icon="@drawable/ic_pp_close"
        android:title="@string/action_clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="105"
        android:icon="@drawable/ic_pp_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

</menu>
